# task-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: COMMAND_ADD.md  COMMAND_COMPLETE.md  COMMAND_DELETE.md  COMMAND_EDIT.md  COMMAND_LIST.md  COMMAND_SEARCH.md  STORAGE.md
examples/: storage_demo.rs
src/: main.rs  storage.rs  task.rs
src/commands/: add.rs  complete.rs  delete.rs  edit.rs  list.rs  mod.rs  search.rs
tests/: unit_tests.rs
